# gridfw

./: .coverage  .gitignore  LICENSE  README.md  benchmark_log.csv  mnist_best_result.csv  param_sweep_log.csv  pyproject.toml  requirements.txt  residential_result_1.50  verify_cssp.py
data/: nasdaq_screener_1765967504839.csv
experiment/: best_case_benchmark.py  compare_k.py  critical_k_benchmark.py  run_dataset_experiment.py  test2_compare_k.py  test3_best_case_benchmark.py
logs/: best_case_residential_debug.csv  compare_k_log.csv  critical_k_final.csv  critical_k_results.csv  grad_test_log.csv  param_sweep_log.csv  time_crit_k.csv
logs/exp2/: compare_k_log.csv  compare_small_k.csv
logs/exp3/: critical_k_adaptive.csv
logs/exp5/: critical_k_arrhythmia.csv  critical_k_myocardial.csv  critical_k_residential.csv  critical_k_secom.csv  critical_k_synthetic_high_corr.csv
logs/old_logs/: accur_crit_k.csv  (+12 more)
notes/: Daniel_notes.aux  Daniel_notes.out  Daniel_notes.tex
scripts/: analyse_compare_k.ipynb  analyze_correlation.py  export_latex.py  load_data.ipynb  plot_compare_k.ipynb  plot_correlation_raw.ipynb  plot_graph.py  plot_heatmap_matrix.ipynb  plot_k.ipynb  plot_k_corr.ipynb  test1_parameter_tuning.ipynb  test4_critical_k.ipynb  verify_cssp.py
src/: example4.csv  f_gradient_verif.py  gradient_verif.py  plot_graph.py  scrape.ipynb  scrape_data.py  stress_test_results.csv
tests/: algo_opt_1.py  conftest.py  repro_issue_local_data.py  residential.py  secom.py  test1_parameter.py  test_f_grad.py  test_medium.py  test_residential.py  test_residential_sweep.py  test_secom.py  test_sweep.py
(+46 files in other folders)
